fix: project headline on multiple lines on mobile
The headline for individual projects was split between multiple lines on mobile,
creating an unpleasing athestic. The font-size has been decrease from
3rem to 2.2rem to fix this issue.

--- a/src/features/projects/components/project/project.scss
+++ b/src/features/projects/components/project/project.scss
@@ -14,6 +14,7 @@
     @include rounded;
     @include flex-column;
 
+
     &::before {
         @include grain;
         @include rounded;
@@ -46,6 +47,14 @@
 
         section {
             margin-bottom: 4rem;
+        }
+    }
+
+    .headline {
+        font-size: 2.2rem;
+
+        @include for-size(tablet-portrait-up) {
+            font-size: 3rem;
         }
     }
 
